--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "portal",
-	"version": "0.0.1",
+	"name": "ng-hub-ui-portal",
+	"version": "0.2.0",
 	"peerDependencies": {
-		"@angular/common": "^17.3.0",
-		"@angular/core": "^17.3.0",
+		"@angular/common": ">=16.0.0",
+		"@angular/core": ">=16.0.0",
 		"ng-hub-ui-utils": "^1.0.0"
 	},
 	"dependencies": {
